--- a/bootdo/src/main/resources/templates/index_v1.html
+++ b/bootdo/src/main/resources/templates/index_v1.html
@@ -42,11 +42,18 @@
 						</ul>
 					</li>
 					<!-- 根据用户权限显示 -->
-					<li th:each="menu : ${menus}"><a href="#"> <i class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i> <span class="nav-label" th:text="${menu.text}">基础信息</span> <span class="fa arrow"></span>
-					</a>
+					<li th:each="menu : ${menus}">
+						<a href="#"> 
+							<i class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i> 
+							<span class="nav-label" th:text="${menu.text}">父级信息</span>
+							<span class="fa arrow"></span>
+						</a>
 						<ul class="nav nav-second-level">
-							<li th:each="cmenu : ${menu.children}"><a class="J_menuItem" href="graph_echarts.html" th:text="${cmenu.text}" th:href="${cmenu.attributes.url}">系统管理</a></li>
-						</ul></li>
+							<li th:each="cmenu : ${menu.children}">
+								<a class="J_menuItem" href="graph_echarts.html" th:text="${cmenu.text}" th:href="${cmenu.attributes.url}">子集信息</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</nav>
